--- a/manifest.json
+++ b/manifest.json
@@ -3,5 +3,11 @@
   "name": "CRXJS React Vite Example",
   "version": "1.0.0",
   "action": { "default_popup": "popup.html" },
-  "devtools_page": "devtools.html"
+  "devtools_page": "devtools.html",
+  "content_scripts": [
+    {
+      "matches": ["<all_urls>"],
+      "js": ["src/content.ts"]
+    }
+  ]
 }
