--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,6 +16,6 @@
     "noEmit": true,
     "jsx": "react-jsx"
   },
-  "include": ["src"],
+  "include": ["src", "node_modules/@crxjs/vite-plugin/client.d.ts"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
