--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-selector",
   "private": true,
-  "version": "0.0.0",
+  "version": "0.1.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -11,7 +11,8 @@
   },
   "dependencies": {
     "@types/chrome": "^0.0.193",
-    "nanoid": "^4.0.0",
+    "@types/react-devtools": "^3.6.0",
+    "@types/react-devtools-inline": "^4.24.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
