--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
     "@vitejs/plugin-react": "^1.3.2",
+    "sass": "^1.54.4",
     "typescript": "^4.7.4",
     "vite": "^3.0.3"
   }
