--- a/package.json
+++ b/package.json
@@ -19,8 +19,7 @@
     "react": "^18.2.0",
     "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^18.2.0",
-    "react-toastify": "^9.0.8",
-    "resq": "^1.10.2"
+    "react-toastify": "^9.0.8"
   },
   "devDependencies": {
     "@crxjs/vite-plugin": "^1.0.13",
